# rinna_gpt

./: .gitignore  README.md  package.json  vite.config.ts  work_memo.md
.github/workflows/: build.yaml  rinna_build.yaml  tauri_build.yaml
rinna_app/: Pipfile  build.ps1  init.ps1  llm.py  main.py  main.spec  requirements.txt
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/examples/: cli.rs
src-tauri/src/: lib.rs  main.rs  util.rs
src/components/: ConversationElm.tsx  ConversationTentativeElm.tsx  PromptFieldElm.tsx
src/hooks/: rinna-hook.ts  rinna-standby-hook.ts
